--- a/src/ci/github-actions/ci.yml
+++ b/src/ci/github-actions/ci.yml
@@ -354,6 +354,9 @@ jobs:
           - name: dist-i686-linux
             <<: *job-linux-xl
 
+          - name: dist-loongarch64-linux
+            <<: *job-linux-8c
+
           - name: dist-mips-linux
             <<: *job-linux-xl
 
