Promote OpenHarmony targets to tier 2
MCP: rust-lang/compiler-team#719

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -221,6 +221,9 @@ jobs:
           - name: dist-mipsel-linux
             os: ubuntu-20.04-xl
             env: {}
+          - name: dist-ohos
+            os: ubuntu-20.04-8core-32gb
+            env: {}
           - name: dist-powerpc-linux
             os: ubuntu-20.04-xl
             env: {}
