--- a/src/ci/github-actions/ci.yml
+++ b/src/ci/github-actions/ci.yml
@@ -369,6 +369,9 @@ jobs:
           - name: dist-mipsel-linux
             <<: *job-linux-xl
 
+          - name: dist-ohos
+            <<: *job-linux-8c
+
           - name: dist-powerpc-linux
             <<: *job-linux-xl
 
