--- a/src/ci/github-actions/ci.yml
+++ b/src/ci/github-actions/ci.yml
@@ -375,6 +375,21 @@ jobs:
           - name: dist-loongarch64-linux
             <<: *job-linux-8c
 
+          - name: dist-mips-linux
+            <<: *job-linux-xl
+
+          - name: dist-mips64-linux
+            <<: *job-linux-xl
+
+          - name: dist-mips64el-linux
+            <<: *job-linux-xl
+
+          - name: dist-mipsel-linux
+            <<: *job-linux-xl
+
+          - name: dist-ohos
+            <<: *job-linux-8c
+
           - name: dist-powerpc-linux
             <<: *job-linux-8c
 
