--- a/src/ci/github-actions/ci.yml
+++ b/src/ci/github-actions/ci.yml
@@ -299,9 +299,10 @@ jobs:
             <<: *job-linux-xl
             tidy: true
 
-          - name: x86_64-gnu-llvm-13
-            <<: *job-linux-xl
-            tidy: false
+          - name: x86_64-gnu-llvm-17
+            env:
+              ENABLE_GCC_CODEGEN: "1"
+            <<: *job-linux-16c
 
           - name: x86_64-gnu-tools
             <<: *job-linux-xl
@@ -464,7 +465,7 @@ jobs:
           - name: x86_64-gnu-llvm-13-stage1
             env:
               RUST_BACKTRACE: 1
-            <<: *job-linux-xl
+            <<: *job-linux-8c
 
           - name: x86_64-gnu-nopt
             <<: *job-linux-xl
