--- a/.gitmodules
+++ b/.gitmodules
@@ -24,8 +24,8 @@
 	url = https://github.com/rust-lang/edition-guide.git
 [submodule "src/llvm-project"]
 	path = src/llvm-project
-	url = https://github.com/rust-lang/llvm-project.git
-	branch = rustc/16.0-2023-06-05
+	url = https://gitee.com/openharmony/third_party_llvm-project.git
+	branch = master
 [submodule "src/doc/embedded-book"]
 	path = src/doc/embedded-book
 	url = https://github.com/rust-embedded/book.git
