--- a/.gitmodules
+++ b/.gitmodules
@@ -27,8 +27,8 @@
 	url = https://github.com/rust-lang/edition-guide.git
 [submodule "src/llvm-project"]
 	path = src/llvm-project
-	url = https://github.com/rust-lang/llvm-project.git
-	branch = rustc/15.0-2022-12-07
+	url = https://gitee.com/openharmony-loongarch/third_party_llvm-project.git
+	branch = rust
 [submodule "src/doc/embedded-book"]
 	path = src/doc/embedded-book
 	url = https://github.com/rust-embedded/book.git
